[package]
name = "const-either"
version = "0.1.1"
edition = "2021"
license = "MIT"
keywords = ["const-generics"]
repository = "https://github.com/GabrielDertoni/const-either"
readme = "README.md"
description = """
Option and Either types with variants known at compile time.
"""

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
